fix:profile content don't distort and don't overflow

--- a/styles/landscape.css
+++ b/styles/landscape.css
@@ -124,12 +124,12 @@ body::-webkit-scrollbar {
 }
 
 .profile-inner-container img {
-  width: 100%;
-  height: 55%;
+  width: 90%;
   border-radius: 10px;
 }
 
 .profile-inner-container h3 {
+  width: 90%;
   font-size: 1.8em;
   color: beige;
   text-align: center;
@@ -138,6 +138,7 @@ body::-webkit-scrollbar {
 }
 
 .profile-inner-container p {
+  width: 90%;
   margin: 0px;
   height: fit-content;
   font-family: "DongQing";
